# easycfg

./: Cargo.toml
src/: args.rs  config.rs  lib.rs  main.rs  server.rs  tui.rs
src/config/: dis.rs  os_rel.rs
src/server/: exec.rs
src/server/exec/: pkg.rs  test.rs  utils.rs
